# confidential-asset-wasm-bindings

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  expo-module.config.json  gen-npm-pkg.sh  package-lock.json  package.json  readme.md  tsconfig.json  tsconfig.lib.json  tsdown.config.ts
.changeset/: add-expo-support.md  consolidate-native-ffi.md  ffi-ci-hardening.md  fix-browser-node-wasm-bundler-compatibility.md  initial-release.md
.github/workflows/: bindings-release.yml  build-wasm.yml  changeset-check.yml  ci.yml  release.yml
android/: build.gradle
android/src/main/java/com/aptoslabs/confidentialassetbindings/: ConfidentialAssetBindingsModule.kt  ConfidentialAssetBindingsView.kt
aptos-confidential-asset-wasm-bindings/: aptos_confidential_asset_wasm-cjs.js  aptos_confidential_asset_wasm-esm.js  aptos_confidential_asset_wasm.d.ts  aptos_confidential_asset_wasm_bg.wasm  aptos_confidential_asset_wasm_bg.wasm.d.ts  index.d.ts  package.json
aptos-confidential-asset-wasm-bindings/pollard-kangaroo/: aptos_pollard_kangaroo_wasm-cjs.js  aptos_pollard_kangaroo_wasm-esm.js  aptos_pollard_kangaroo_wasm.d.ts  aptos_pollard_kangaroo_wasm_bg.wasm
aptos-confidential-asset-wasm-bindings/range-proofs/: aptos_rp_wasm-cjs.js  aptos_rp_wasm-esm.js  aptos_rp_wasm.d.ts  aptos_rp_wasm_bg.wasm  aptos_rp_wasm_bg.wasm.d.ts
bindings/go/: README.md  go.mod
bindings/go/aptosconfidential/: cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_amd64_musl.go  cgo_linux_arm64.go  cgo_linux_arm64_musl.go  cgo_windows_amd64.go  cgo_windows_arm64.go  flatten.go  flatten_test.go  golden_test.go  nocgo.go  validation.go  validation_test.go
docs/: advanced.md  api.md  architecture.md  bindings.md  examples.md
docs/contributors/: development.md  project-structure.md  releasing.md  testing.md
example/: App.tsx  metro.config.js  package-lock.json  package.json  tsconfig.json
examples/browser/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/browser/src/: App.css  App.tsx  fixtures.ts  runner.ts  types.ts
examples/expo/: App.tsx  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
examples/expo/src/: fixtures.ts  utils.ts
examples/go/: README.md  go.mod  main.go  smoke_test.go
examples/node/: package-lock.json  package.json  tsconfig.json
examples/node/src/: runner.ts  server.ts  types.ts
ios/: ConfidentialAssetBindings.podspec  ConfidentialAssetBindingsModule.swift  ConfidentialAssetBindingsView.swift
ios/Rust/Headers/: aptos_confidential_asset.h  confidential_asset_mobile.h
pollard-kangaroo/: Cargo.toml  build-wasm.sh
pollard-kangaroo/src/: wasm.rs
range-proofs/: Cargo.toml  Dockerfile  build-wasm.sh  test.ts
range-proofs/src/: lib.rs  rp.rs
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: discrete_log.rs  lib.rs  range_proof.rs
rust/core/tests/: cross_version_compat.rs
rust/ffi/: Cargo.toml  README.md  cbindgen.toml
rust/ffi/src/: abi.rs  bridge.rs  ffi.rs  jni.rs  lib.rs  shared.rs
rust/mobile/: Cargo.toml
rust/mobile/src/: abi.rs  ffi.rs  jni.rs  lib.rs  shared.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: discrete_log.rs  lib.rs  range_proof.rs
scripts/: build-android.sh  build-ffi-for-bindings.sh  build-ios.sh  build-wasm.sh  check-binding-parity.sh  gen-npm-pkg.sh  install-go-ffi-from-release.sh  wasm-sizes.sh
src/: ConfidentialAssetBindings.types.ts  ConfidentialAssetBindingsModule.ts  ConfidentialAssetBindingsModule.web.ts  ConfidentialAssetBindingsView.tsx  ConfidentialAssetBindingsView.web.tsx  index.browser.ts  index.native.ts  index.node.ts  index.ts  types.ts
src/__tests__/: index.native.test.js
src/expo/: index.ts
src/expo/__tests__/: index.test.js
src/web/: index.browser.ts  index.node.ts  shared.ts
tests/fixtures/: golden_batch_range_proof.json
unified/: Cargo.toml
